Starting to think about ball collision detection

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,8 +4,8 @@ block content
   h1= title
   p Welcome to #{title}
   div(id='drawing-area')
-  audio(src='/sounds/beep.mp3' preload='auto')
-  audio(src='/sounds/beep2.mp3' preload='auto')
-  audio(src='/sounds/beep3.mp3' preload='auto')
+  audio(src='/sounds/small.mp3' preload='auto')
+  audio(src='/sounds/medium.mp3' preload='auto')
+  audio(src='/sounds/large.mp3' preload='auto')
   script(src='/javascripts/raphael-min.js')
   script(src='/javascripts/script.js')
